--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "mqtt": "^3.0.0"
+    "mqtt": "^3.0.0",
+    "ws": "^7.3.1"
   }
 }
