--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.0",
     "bent": "^7.3.10",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "influx": "^5.6.3",
     "local-storage": "^2.0.0",
     "mqtt": "^3.0.0",
     "nedb": "^1.8.0",
-    "ws": "^7.3.1"
+    "ws": "^7.3.1",
+    "yarn": "^1.22.10"
   }
 }
