--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@influxdata/influxdb-client": "^1.33.1",
     "axios": "^0.21.0",
     "bent": "^7.3.10",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "influx": "^5.6.3",
     "local-storage": "^2.0.0",
-    "mqtt": "^3.0.0",
+    "mqtt": "^4.3.7",
     "nedb": "^1.8.0",
     "ws": "^7.3.1",
     "yarn": "^1.22.10"
